Add optimize experiment

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,6 +21,7 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-158805556-1', 'auto');
+	ga('require', 'GTA-5JBQTC2');
 	ga('send', 'pageview');
 	</script>
 	<!-- End Google Analytics -->
